Kubernetes/ingress/basic-auth-ingress.yml
 apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-with-auth
  annotations:
    # type of authentication
    nginx. ingress.kubernetes.io/auth-type: basic
    # name of the secret that contains the user/password definitions
    nginx. ingress.kubernetes.io/auth-secret: basic-auth
    # message to display with an appropriate context why the authentication is required
    nginx.ingress.kubernetes.io/auth-realm: 'Authentication Required - foo'
spec:
  rules:
  - host: "foo.bar.com"
    http:
      paths:
      - path: "/"
        pathType: Prefix
        backend:
          service:
            name: python-app-service
            port:
              number: 80
