Kubernetes/ingress/no-auth-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-no-auth
spec:
  rules:
  - host: "foo.bar.com"
    http:
      paths:
      - path: "/"
        pathType: Prefix
        backend:
          service:
            name: python-app-service
            port:
              number: 80
