Kubernetes/ingress/wild-card-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-with-auth
spec:
  rules:
  - host: "*.bar.com"
    http:
      paths:
      - path: "/"
        pathType: Prefix
        backend:
          service:
            name: python-app-service
            port:
              number: 80
